	  match the config.h #includes everywhere else. (DLR)
	- Change all hardcoded instances of 128 bytes to MAX_BUF_SIZE,
	  and #define MAX_BUF_SIZE as 128 in nano.h. (DLR)
	- Use separate keys to go to the previous and next strings in
	  the search/replace history, and display them as "^P" and "^N".
	  This makes mouse clicks work properly on them.  Changes to
	  shortcut_init(), help_init(), and do_statusbar_input(). (DLR)
- files.c:
  load_open_file()
	- Remove an unneeded clearok(FALSE). (DLR)
  get_next_filename()
	- Use an unsigned long instead of an int for the number
	  prepended to the filename. (DLR)
  write_file()
	- Since lineswritten is a size_t, print its value as an unsigned
	  long instead of an unsigned int. (DLR)
  do_browser()
	- Don't treat NANO_CANCEL_KEY as NANO_EXIT_KEY anymore, for
	  consistency. (DLR)
- global.c:
  shortcut_init()
	- Move the "Refresh" and "Exit" shortcuts to the beginning of
	  the help browser shortcut list, for consistency. (DLR)
- nano.c:
  print1opt_full()
	- If desc should be empty, allow it to be NULL instead of
	  "", since the latter is not necessarily translated as "".
	  (DLR, found by Jordi)
  do_alt_speller()
	- Replace a set_modified() with SET(MODIFIED) to avoid an
	  unnecessary update, and remove an unneeded clearok(FALSE).
	  (DLR)
  do_output()
	- Properly allow wrapping when we insert a tab, for consistency.
	  (DLR)
- utils.c:
  num_of_digits()
	- Use a size_t instead of an int, and rename to digits(). (DLR)
- winio.c:
  do_help()
	- Don't treat NANO_CANCEL_KEY as NANO_EXIT_KEY anymore, for
	  consistency. (DLR)
  total_update()
	- Simplify to call clearok(TRUE) and wrefresh() on edit, which
	  updates the entire screen in fewer function calls. (DLR)
- THANKS:
	- Add new translators to the credits.

GNU nano 1.3.7 - 2005.04.10
- General:
	- Miscellaneous comment fixes. (DLR)
	- After (re)initializing the terminal, make sure the cursor is
	  always turned on.  Changes to do_alt_speller(),